--- a/_quarto.yml
+++ b/_quarto.yml
@@ -8,7 +8,7 @@ website:
   title: ""
   favicon: "assets/logo.png"
   navbar:
-    logo: "assets/home.png"
+    logo: "assets/icons/home.png"
     left:
       # - href: index.qmd
       - text: about
